infra/mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: mysql
  annotations:
    lbipam.cilium.io/sharing-key: "lan-shared"
    lbipam.cilium.io/sharing-cross-namespace: "*"
    lbipam.cilium.io/ips: "192.168.1.120"
spec:
  type: LoadBalancer
  selector:
    app: mysql
  ports:
    - name: mysql
      port: 3306
      protocol: TCP
